--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Databases
+# Database
 spring.datasource.url=jdbc:mysql://localhost/starwars?useSSL=false
 spring.datasource.username=user
 spring.datasource.password=123456
